- Add IOnDemandImageTiler interface and implementations for FFM, JNA, and CLI - Integrate on-demand tiling into ImageStoreService and Application configuration - Refactor existing ImageTiler implementations and update ImageLibraryFactory - Move JNA classes into image-utils - Add comprehensive tiling test suite and image resources - Update module build configurations and dependencies